# ilp-talk-scheduling

./: main.py  pyproject.toml  segment.py
src/talk_scheduling/: __init__.py  _problem.py  _types.py  helpers.py
tests/: test_pulp_min.py  test_pulp_or.py
